# MagicControl

./: README.md  index.html  package-lock.json  package.json
docs/: README.md  clean_hands.py  clean_wave.py  guide.html
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
