[package]
name = "magic-control-v2"
version = "0.1.0"
description = "Mac 智能翻页笔 - 使用摄像头手势控制"
authors = ["MagicControl"]
edition = "2021"

[workspace]

[lib]
name = "magic_control_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
